dirmngr does not ask keyservers for fingerprints
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Dec 16 2021, 4:34 PM
Tags

Description

Some keyservers, e.g. keyserver.ubuntu.com (Hockeypuck), do not provide the key fingerprints by default. By setting the fingerprint variable to on in the request URL, we can explicitly ask HKP keyservers to provide the fingerprints when listing keys.

Note that Kleopatra does not work properly without fingerprints (see T5725: Kleopatra: Certificate lookup shows only one result even if there are 100s matches). Arguably, that needs to be fixed in Kleopatra, but dirmngr should still ask for the fingerprints.

Event Timeline

Proposed patch:

IIRC, the problem is/was that this breaks some old keyservers. But there are no more old keyservers - if there are useful keyservers at all.

ikloecker claimed this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.